--- a/DAS7000_Research_Project.ipynb
+++ b/DAS7000_Research_Project.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOrbwd+vjSTaUjpZAVJIeqK",
+      "authorship_tag": "ABX9TyOQIEmVB6eVYiIwsKgVACE1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -42,7 +42,7 @@
         "- This for a my Research Project, ill be using a [Motor Vehicle Collisions Crashes](https://catalog.data.gov/dataset/motor-vehicle-collisions-crashes) under the assumption that i will be providing key insights to a fictional car insurace company in New York.\n",
         "\n",
         "##tools\n",
-        "- Google Colab"
+        "- Google Colab (python)"
       ],
       "metadata": {
         "id": "rNQQY2ntwVkF"
